--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "llonebotdoc",
+  "name": "lucky-lillia-doc",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -9,9 +9,9 @@
   },
   "author": "",
   "devDependencies": {
-    "@types/node": "^24.1.0",
-    "vitepress": "^1.6.3",
-    "vue": "^3.5.18"
+    "@types/node": "^25.0.3",
+    "vitepress": "^1.6.4",
+    "vue": "^3.5.26"
   },
-  "packageManager": "yarn@4.9.2"
+  "packageManager": "yarn@4.12.0"
 }
