--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "devDependencies": {
     "@types/node": "^25.0.3",
+    "mermaid": "^11.12.2",
     "vitepress": "^1.6.4",
+    "vitepress-plugin-mermaid": "^2.0.17",
     "vue": "^3.5.26"
   },
   "packageManager": "yarn@4.12.0"
