--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
-  "author": "",
+  "author": "linyuchen",
   "devDependencies": {
     "@types/node": "^25.0.3",
     "mermaid": "^11.12.2",
